main.css
/*
General Styling
*/

.clearfix:after {
    content: "";
    visibility: hidden;
    display: block;
    height: 0;
    clear: both;
}

article {
    margin-bottom: 1.55rem;

    #box-shadow: 0px 1px 1px 2px red inset;
}

header a:hover,
.top-link a span:last-child:hover,
.nav-footer-wrap a:hover {
    text-decoration: underline;
}

asscock:hover {
    text-decoration: none;
}



/*
Header Styling
*/


header {
    background-color: #303030;

    #box-shadow: 0px 1px 1px 2px blue inset;
}

.header-top {
    max-width: 1010px;
    margin: auto;
    padding: 1rem 1rem;

    #box-shadow: 0px 1px 1px 2px black inset;
}

.brand {
    float: left;

    #box-shadow: 0px 1px 1px 2px green inset;
}

.brand img {
    height: 85px;
    width: 170px;
}


.nav-social {
    float: right;

    #box-shadow: 0px 1px 1px 2px red inset;
}

.nav-social a img {
    position: relative;
    top: 7px;
}

.nav-social a .fb-icon {
    top: 5px;
}


.nav-sign-sub {
    float: right;

    #box-shadow: 0px 1px 1px 2px yellow inset;
}

.nav-sign-sub a {
    padding-right: 12px;

    color: #9d9d9d;
    font-size: .75rem;
    letter-spacing: .04rem;
    text-transform: uppercase;
}

.sign-in-icon {
    position: relative;
    top: 7px;
}

.sub-icon {
    position: relative;
    top: 12px;
}

.search {
    clear: right;
    float: right;
    margin-top: 10px;

    #box-shadow: 0px 1px 1px 2px purple inset;
}

.search input {
    width: 300px;
    height: 33px;
    
    padding-left: 15px;
    letter-spacing: .08rem;
    text-transform: uppercase;

    color: #fff;
    background-color: #303030;
    border: 1px solid #424242;
}

.header-bottom {
    max-width: 1010px;
    margin: auto;
    padding-left: 1rem;
    padding-right: 1rem;

    #box-shadow: 0px 1px 1px 2px red inset;
}

.nav {
    display: flex;
    justify-content: space-between;
}

.nav li {
    display: inline-block;
}

.nav li a {
    color: #9d9d9d;
    font-size: .85rem;
    text-transform: uppercase;
    line-height: 2.25rem;
}

.menu {
    display: none;
}

.menu a {
    position: relative;
    display: block;
    height: 40px;
    width: 160px;
    padding: 6px;

    color: #fff;
    font-size: .85rem;
    text-transform: uppercase;
}

.menu a span {
    display: block;
    position: absolute;
    height: 2px;
    width: 11px;
    top: 49%;

    background-color: #fff;
}

.menu a span:first-child {
    transform: translateY(-3px);
}

.menu a span:last-of-type {
    transform: translateY(3px);
}

.menu a div {
    padding-top: 9px;
    padding-left: 20px;
}

.all-sections {
    float: left;
}

.user {
    float: right;
}

.header-bottom .user a {
    width: auto;
}






/*
Main Top Styling
*/


.main {
    max-width: 1035px;
    padding: 1rem;
    margin-bottom: 2rem;

    #box-shadow: 0px 1px 1px 2px black inset;
}

.main-top {
    margin-top: 1.1rem;

    #box-shadow: 0px 1px 1px 2px yellow inset;
}

.top-pic img {
    width: 100%;
}

.info {
    background-color: #efefef;
    font: 4rem;
    text-align: center;
    text-transform: uppercase;

    #box-shadow: 0px 1px 1px 2px gray inset;
}

.cat {
    padding: 20px 9px 0 6px;

    font-size: 1rem;
    letter-spacing: .5rem;
}

.main-title {
    padding: 15px 30px 30px;
}

.main-title a {
    display: block;
    color: #333;
    font-size: 1.8rem;
    letter-spacing: .1rem;
}





/*
News Styling
*/

.news {
    margin-top: 50px;
    margin-bottom: 50px;

    #box-shadow: 0px 1px 1px 2px pink inset;
}


.news-pic {
    position: relative;
}

.news-pic img {
    width: 100%;
}

.news-cat {
    position: absolute;
    bottom: 0;
    left: 0;
    padding: 3px 9px 0 6px;

    color: #000;
    background-color: white;
    text-transform: uppercase;
}

.news-title {
    margin-top: 10px;
}

.news-title a {

    color: #333;
    font-size: 19.4px;
    line-height: 1.5rem;
    letter-spacing: .05rem;
    text-transform: uppercase;
}

.empty {
    width: 100%;
}


.section-bottom {
    display: flex;
    justify-content: center;

    #box-shadow: 0px 1px 1px 2px blue inset;
}

.more-button a button {
    padding: .05rem 1.15rem .3rem 1rem;
    margin: .9rem auto .5rem .625rem;

    border-radius: 1.5rem;
    background-color: #000;
    color: #fff;
    font-size: .8rem;
    letter-spacing: .09rem;
    text-transform: uppercase;
}

.more-button a button span {
    position: relative;
    top: 3px;
    
    padding-right: 5px;
    font-size: 1.3rem;
    font-weight: 700;
}



/*
Features Styling
*/

.features {
    margin-top: 50px;
    margin-bottom: 50px;

    #box-shadow: 0px 1px 1px 2px yellow inset;
}

.features-top {
    margin-bottom: 1.3rem;

    #box-shadow: 0px 1px 1px 2px red inset;
}

.title {
    margin-bottom: .75rem;

    font-size: 1.2rem;
    letter-spacing: .5rem;
    text-transform: uppercase;

    #box-shadow: 0px 1px 1px 2px green inset;
}

.features .top-pic {
    position: relative;

    #box-shadow: 0px 1px 1px 2px brown inset;
}

.features-top-info {
    position: absolute;
    bottom: 50px;
    left: 50%;
    transform: translate(-50%,0);
    width: 88%;
    padding: 23px;

    background-color: #fff;
    text-align: center;

    #box-shadow: 0px 1px 1px 2px pink inset;
}

.features-top-info a {
    color: #333;
    font-size: 1.8rem;
    letter-spacing: .1rem;
    text-transform: uppercase;
}

.features .col-p-6 .news-title a,
.tech .col-p-6 .news-title a {
    font-size: 1.4rem;
    line-height: 2rem;
}


.courses {
    margin-top: 15px;
}

.courses a {
    background-color: #f6f6f6;
    color: #2a60ad;
    font-size: 15px;
    letter-spacing: 0.16px;
    font-style: italic;
    text-transform: uppercase;
}


/*
Tech Styling
*/

.courses-cat {
    position: absolute;
    bottom: 0px;
    left: 4px;
    width: 65%;
    padding: 4px 4px 4px 0;
}



/*
Clubs Styling
*/

.clubs .col-p-9 a,
.miller .col-p-9 a {
    font-size: 1.6rem;
    line-height: 2rem;
}


/*
Miller
*/


/*
Footer
*/

footer {
    padding-left: 1rem;
    padding-right: 1rem;
    padding-bottom: 22px;

    background-color: #303030;

    #box-shadow: 0px 1px 1px 2px red inset;
}

.footer-top {
    padding-top: .625rem;
    padding-bottom: .625rem;

    #box-shadow: 0px 1px 1px 2px brown inset;
}

.footer-top,
.nav-footer-wrap,
.footer-bottom {
    max-width: 1010px;
    margin: auto;
}

.footer-brand {
    float: left;

    #box-shadow: 0px 1px 1px 2px green inset;
}

.footer-brand img {
    height: 40px;
    width: 80px;
}

.top-link a {
    display: inline-block;
    padding-left: 15px;

    color: #fff;
    font-size: .8rem;
    text-transform: uppercase;
 
    #box-shadow: 0px 1px 1px 2px orange inset;
}

.top-link a span:first-child {
    position: relative;
    top: 17px;
    padding-right: 2px;
    
    font-size: 2rem;
    font-weight: 700;

}


.nav-footer-top , 
.nav-footer-bottom {
    margin-top: 15px;
}

.nav-footer-top li,
.nav-footer-bottom li {
    display: inline-block;
}
.nav-footer-top li a,
.nav-footer-bottom li a {
    color: #dcdcdc;
    font-size: .85rem;
    text-transform: uppercase;
    line-height: 2.25rem
}

.nav-footer-top ul,
.nav-footer-bottom ul {
    display: flex;
    justify-content: space-between;
    #box-shadow: 0px 1px 1px 2px purple inset;
}

.nav-footer-bottom {
    width: 85%;
    margin-bottom: 25px;
}

.footer-bottom {
    color: #dcdcdc;
    font-size: .75rem;
    line-height: 1.25rem
}


/*
Media Queries less than 800px
*/

@media (max-width: 800px) {

    .nav-sign-sub {
        display: none;
    } 

    .header-bottom ul {
        display: none;
    }

    .nav-footer-top {
        padding-bottom: 40px;
    }

    .nav-footer-top ul {
        display: none;
    }

    .nav-footer-bottom {
        clear: both;
        width: auto;
    }

    .nav-footer-bottom ul {
        display: block;
    }

    .nav-footer-bottom ul li {
        margin-right: 25px;
    }

    .menu {
        display: block;
    }

    .search {
        clear: none;
        position: relative;
        top: -5px;
        left: -18px;
    }

}


/*
Media Queries less than 739px
*/

@media (max-width: 739px) {

    .brand img {
        width: 100px;
        height: 50px;
    }

    .col-p-4,
    .col-p-6,
    .col-p-3,
    .col-p-9 {
        width: 100%;
    }

    article {
        margin-bottom: 3rem;
    }

    .features-top {
        margin-bottom: 1.5rem;
    }
}


/*
Media Queries less than 640px
*/


@media (max-width: 640px) {
    .nav-social {
        display: none;
    }

    .search {
        margin-left: 5%;
        width: 70%;
    }

    .search input {
        width: 100%;
    }

}

